# chat

./: README.md  chat.md  log.md
src/: log.md  test  test.cpp
src/client/: chat  chat.cpp  client.h  compile_chat
src/client/chatUI/: ChatUI.qml
src/client/chat_client/: CusClient.qml  CusLogPage.qml  CusMainPage.qml  CusTextField.qml  DefConst.js  DefConst.qml  chat_client.pro  chat_client.pro.user.dbc26c7  main.cpp  main.qml  qml.qrc  test.qml
src/client/chat_client/qml/global/: CusClient.qml  CusDefine.qml  CusEditNickName.qml  CusMessageBox.qml  CusSideMenuBar.qml  DefConst.js  Define.js  cusFluPaneItem.qml
src/client/chat_client/qml/page/: CusAddContactPage.qml  CusChatPage.qml  CusProfile.qml  CusSetting.qml  CusTest.qml  qmldir
src/client/chat_client/qml/window/: CusLoginWindow.qml  CusLogupWindow.qml  CusMainWindow.qml
src/include/: Signal&Macro.h  Struct.h  db.cpp  db.h
src/server/: CMakeLists.txt  chat_server  chat_server.cpp  chat_server.h  chat_server_contact.cpp  chat_server_global.cpp  chat_server_log.cpp  chat_server_message.cpp  compile chat_server  compile testdb  lsport  server  server.cpp  server.h  server_main.cpp  testdb  testdb.cpp
src/server/Source/db/: db_contact.cpp  db_global.cpp  db_log.cpp  db_message.cpp
src/server/Source/encode/: base64.cpp  conio.cpp
src/server/Source/tcpserver/: tcpserver_contact.cpp  tcpserver_global.cpp  tcpserver_log.cpp  tcpserver_message.cpp
src/server/include/: Signal&Macro.h  Struct.h  db.cpp  db.h  function.h  json.hpp  server.h
src/server/include/db/: db.h  db_contact.cpp  db_global.cpp  db_log.cpp  db_message.cpp  server.h  server.h.in
src/server/include/tcpserver/: Signal&Macro.h  tcpserver.h
src/server/include/threadpool/: ThreadPool.h
src/server/lib/: libmysqlclient.so.21
(+12 files in other folders)
